add Login endpoint and its Swagger docummentation
